[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Modes/WorldTravel/TravelArrow.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Resources/Tilemaps/TilemapTravel.res" type="TileSet" id=2]
[ext_resource path="res://assets/graphics/travel/Magister Ludi - Territory.png" type="Texture" id=3]
[ext_resource path="res://src/Modes/WorldTravel/TravelScreen.gd" type="Script" id=4]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Map" type="TextureRect" parent="."]
margin_right = 2048.5
margin_bottom = 1150.0
rect_scale = Vector2( 8, 8 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EncounterTimer" type="Timer" parent="."]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -102, -70 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 48, 48 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TravelArrow" parent="." instance=ExtResource( 1 )]

[connection signal="timeout" from="EncounterTimer" to="." method="_on_EncounterTimer_timeout"]
[connection signal="moving" from="TravelArrow" to="." method="_on_TravelArrow_moving"]
[connection signal="notmoving" from="TravelArrow" to="." method="_on_TravelArrow_notmoving"]
